<resources>
    <string name="app_name">MadLevel3Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_portal">ADD PORTAL</string>
    <string name="site_name">Site Name</string>
    <string name="title">Title</string>
    <string name="url">Url</string>
    <string name="url_http">http://</string>
    <string name="not_valid_portal">Invalid portal</string>
</resources>